--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -156,13 +156,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_current_date_when_starting_new_task">在开始一项新任务时自动插入当前日期</string>
     <string name="tasks_with_todays_date">为任务附上今天的日期</string>
     <string name="append_contexts_and_projects">附加内容与项目</string>
-    <string name="append_contexts_and_projects_on_end_of_task">当使用适当的文本动作时，在任务结束时附加背景和项目</string>
+    <string name="append_contexts_and_projects_on_end_of_task">使用对应的工具栏功能时，在任务末尾附加完成的情景和项目</string>
     <string name="rtl_rendering">从右向左渲染</string>
     <string name="highlight_line_ending">高亮行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">高亮显示两个及以上的行末空格</string>
     <string name="use_monospace_for_code">为代码使用等宽字体</string>
     <string name="disable_code_block_highlight">禁用代码高亮</string>
-    <string name="auto_renumber_ordered_list">自动重新编号订购列表</string>
+    <string name="auto_renumber_ordered_list">自动重编号有序列表</string>
     <string name="auto_renumber_ordered_list_slowdown">此选项可能会影响应用性能。</string>
     <string name="use_different_fonttype_slow_down">用不同的字体显示代码。启用后可能会大幅影响性能。</string>
     <string name="general">通用</string>
