--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,7 +140,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">语法高亮刷新延迟 (以毫秒为单位)。较低的值将更早开始高亮，但它会耗尽您的电池，并可能会降低旧设备上的应用性能。</string>
     <string name="highlighting_enabled_or_not__appspecific">控制输入的文本是否应显示语法高亮</string>
     <string name="control_font_size_in_editor">调整编辑器中文字的字号</string>
-    <string name="textactions_show_useful_actions_description__appspecific">在底部显示一条快捷按钮。这些文字操作按钮可以修改文字或基于文字进行其他操作。</string>
+    <string name="textactions_show_useful_actions_description__appspecific">在底部显示一排快捷按钮。这些文字操作按钮可以修改文字或基于文字进行其他操作。</string>
     <string name="load_last_opened_folder_at_startup">启动时加载上次打开的目录</string>
     <string name="format">格式</string>
     <string name="contexts">全文</string>
