--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,7 +140,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">语法高亮刷新延迟 (以毫秒为单位)。较低的值将更早开始高亮，但它会耗尽您的电池，并可能会降低旧设备上的应用性能。</string>
     <string name="highlighting_enabled_or_not__appspecific">控制输入的文本是否应显示语法高亮</string>
     <string name="control_font_size_in_editor">调整编辑器中文字的字号</string>
-    <string name="textactions_show_useful_actions_description__appspecific">在底部显示一排快捷按钮。这些文字操作按钮可以修改文字或基于文字进行其他操作。</string>
+    <string name="textactions_show_useful_actions_description__appspecific">在底部显示一排快捷按钮。这些文本操作按钮可以修改文字或着对文字进行其他操作。</string>
     <string name="load_last_opened_folder_at_startup">启动时加载上次打开的目录</string>
     <string name="format">格式</string>
     <string name="contexts">全文</string>
@@ -156,13 +156,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_current_date_when_starting_new_task">在开始一项新任务时自动插入当前日期</string>
     <string name="tasks_with_todays_date">为任务附上今天的日期</string>
     <string name="append_contexts_and_projects">附加内容与项目</string>
-    <string name="append_contexts_and_projects_on_end_of_task">使用对应的工具栏功能时，在任务末尾附加完成的情景和项目</string>
+    <string name="append_contexts_and_projects_on_end_of_task">使用对应的文本操作时，在任务末尾附加完成的情境和项目</string>
     <string name="rtl_rendering">从右向左渲染</string>
     <string name="highlight_line_ending">高亮行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">高亮显示两个及以上的行末空格</string>
     <string name="use_monospace_for_code">为代码使用等宽字体</string>
     <string name="disable_code_block_highlight">禁用代码高亮</string>
-    <string name="auto_renumber_ordered_list">自动重编号有序列表</string>
+    <string name="auto_renumber_ordered_list">自动重新编号有序列表</string>
     <string name="auto_renumber_ordered_list_slowdown">此选项可能会影响应用性能。</string>
     <string name="use_different_fonttype_slow_down">用不同的字体显示代码。启用后可能会大幅影响性能。</string>
     <string name="general">通用</string>
