--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -202,7 +202,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="bottom">底端</string>
     <string name="center">居中</string>
     <string name="textaction_spacing">文本操作按钮间距</string>
-    <string name="horizontal_space_between_textactions">文本操作按钮的水平间距</string>
+    <string name="horizontal_space_between_textactions">文本操作按钮之间水平方向的距离</string>
     <string name="center_text">居中文字</string>
     <string name="edit_text_in_center_of_screen">在屏幕中央编辑文本</string>
     <string name="clipboard">剪切板</string>
