--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,7 +140,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">语法高亮刷新延迟 (以毫秒为单位)。较低的值将更早开始高亮，但它会耗尽您的电池，并可能会降低旧设备上的应用性能。</string>
     <string name="highlighting_enabled_or_not__appspecific">控制输入的文本是否应显示语法高亮</string>
     <string name="control_font_size_in_editor">调整编辑器中文字的字号</string>
-    <string name="textactions_show_useful_actions_description__appspecific">显示一条带有快捷文本操作功能与插入常用语法功能的工具栏</string>
+    <string name="textactions_show_useful_actions_description__appspecific">在底部显示一排快捷按钮。这些文本操作按钮可以修改文字或着对文字进行其他操作。</string>
     <string name="load_last_opened_folder_at_startup">启动时加载上次打开的目录</string>
     <string name="format">格式</string>
     <string name="contexts">全文</string>
@@ -156,13 +156,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_current_date_when_starting_new_task">在开始一项新任务时自动插入当前日期</string>
     <string name="tasks_with_todays_date">为任务附上今天的日期</string>
     <string name="append_contexts_and_projects">附加内容与项目</string>
-    <string name="append_contexts_and_projects_on_end_of_task">当使用适当的文本动作时，在任务结束时附加背景和项目</string>
+    <string name="append_contexts_and_projects_on_end_of_task">使用对应的文本操作时，在任务末尾附加完成的情境和项目</string>
     <string name="rtl_rendering">从右向左渲染</string>
     <string name="highlight_line_ending">高亮行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">高亮显示两个及以上的行末空格</string>
     <string name="use_monospace_for_code">为代码使用等宽字体</string>
     <string name="disable_code_block_highlight">禁用代码高亮</string>
-    <string name="auto_renumber_ordered_list">自动重新编号订购列表</string>
+    <string name="auto_renumber_ordered_list">自动重新编号有序列表</string>
     <string name="auto_renumber_ordered_list_slowdown">此选项可能会影响应用性能。</string>
     <string name="use_different_fonttype_slow_down">用不同的字体显示代码。启用后可能会大幅影响性能。</string>
     <string name="general">通用</string>
@@ -176,7 +176,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">下一页 (Page Down)</string>
     <string name="move_text_one_line_up">上移一行</string>
     <string name="move_text_one_line_down">下移一行</string>
-    <string name="start_new_line_below">在下方开始新行</string>
+    <string name="start_new_line_below">在下方新建行</string>
     <string name="key_pos_1">行首 (Home 键)</string>
     <string name="key_pos_end">行末 (End 键)</string>
     <string name="key_pos_1_document">文首</string>
@@ -185,7 +185,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">制表符</string>
     <string name="start_on_bottom">从文末开始</string>
     <string name="start_on_bottom_when_loading_document">载入文件时将光标置于文件末尾处</string>
-    <string name="unordered_list_character">无序列表字符</string>
+    <string name="unordered_list_character">无序列表标示字符</string>
     <string name="character_to_start_items_of_unordered_list_with">用于表示无序列表的字符</string>
     <string name="unordered_list_char_dash">连词符 (-)</string>
     <string name="unordered_list_char_asterisk">星号 (*)</string>
@@ -202,7 +202,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="bottom">底端</string>
     <string name="center">居中</string>
     <string name="textaction_spacing">文本操作按钮间距</string>
-    <string name="horizontal_space_between_textactions">文本操作按钮的水平间距</string>
+    <string name="horizontal_space_between_textactions">文本操作按钮之间水平方向的距离</string>
     <string name="center_text">居中文字</string>
     <string name="edit_text_in_center_of_screen">在屏幕中央编辑文本</string>
     <string name="clipboard">剪切板</string>
@@ -305,7 +305,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">应用起始文件夹</string>
     <string name="tab_width">制表符宽度</string>
     <string name="amount_of_space_for_tab">制表符显示的空格数</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">选中的文件可能是一个纯文本文件。 您要在编辑器中打开它吗？\n\n请勿尝试打开二进制文件。 如果您不确定，请使用其他应用打开。</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">选中的文件可能是一个纯文本文件。 您要在编辑器中打开，或在其他应用中打开它吗？\n\n请勿尝试打开二进制文件。 如果不确定，请使用其他应用打开。</string>
     <string name="list_in_recent_files">最近文件列表</string>
     <string name="reload">刷新</string>
     <string name="wrap_words">折行</string>
@@ -328,7 +328,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">阅读</string>
     <string name="read">只读</string>
     <string name="table">表格</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">多少列？长按桌面按钮来开始一个表 (插入头部)，按短按以添加一行。</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">需要多少列？长按表格按钮来新建一个表格（插入表头），短按以添加一行。</string>
     <string name="example_of_a_markdown_table">Markdown 表格示例</string>
     <string name="delete_lines">删除行</string>
     <string name="unordered_list">无序列表</string>
@@ -343,8 +343,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_1">标题 1</string>
     <string name="heading_2">标题 2</string>
     <string name="heading_3">标题 3</string>
-    <string name="heading_4">标题 4</string>
-    <string name="heading_5">标题 5</string>
+    <string name="heading_4">4 级标题</string>
+    <string name="heading_5">5 级标题</string>
     <string name="bold">粗体</string>
     <string name="italic">斜体</string>
     <string name="highlighted">高亮</string>
@@ -362,60 +362,60 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="selected">已选择</string>
     <string name="back">后退</string>
     <string name="expand_collapse">展开/收起</string>
-    <string name="essential">基本的</string>
+    <string name="essential">基础设置</string>
     <string name="append_human_readable_uuid_to_new_tasks">将人类可读的 UUID 附加到新任务</string>
-    <string name="action_order">动作顺序</string>
+    <string name="action_order">操作顺序</string>
     <string name="toggle_action_visibility">切换操作可见性</string>
     <string name="load_default_settings">加载默认设置</string>
     <string name="drag">拖动</string>
     <string name="created">已创建</string>
     <string name="file_encryption_password">文件加密密码</string>
-    <string name="no_password_set_cannot_encrypt_decrypt">没有设置密码，不能加密或解密。\n前往设置 -&gt; 普通-&gt; 密码来设置密码。</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">没有设置密码，不能加密或解密。\n请前往设置 -&gt; 常规 -&gt; 密码来设置密码。</string>
     <string name="encrypt_file_content">加密文件内容</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">无法加密文件内容。文件未保存。</string>
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">无法解密文件内容。您使用了错误的密码吗？该文件真的是加密的 Markors AES 吗？</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">密码已设置。 设置新密码将覆盖现有密码，如果您忘记密码，您可能无法再访问文件。</string>
     <string name="code_block">代码块</string>
     <string name="add_completion_date">添加完成日期</string>
-    <string name="add_completion_date_for_todos_when_marking_them_as_done">将待办事项标记为已完成时添加完成日期</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">当待办事项标记为已完成时添加完成日期</string>
     <string name="file_description_format">文件描述格式</string>
-    <string name="file_description_format_dialog">文件浏览器中每个文件下的描述格式。关注Android的SimpleDateFormat 规则，并添加用于显示文件大小的 FS 留空以使用您的本地化默认格式。\n\n示例输入：\nFS yyyy MMM dd hh:mm:ss aa\n输出格式：\n30KB 2020 Mar 20 11:24:52 PM</string>
-    <string name="loading_default_value">加载默认值</string>
+    <string name="file_description_format_dialog">文件浏览器中每个文件下的描述格式。 遵循 Android 的 SimpleDateFormat 规则，添加 FS 用于显示文件大小。 留空以使用您的语言环境的默认格式。\n\n输入示例：\nFS yyyy MMM dd hh:mm:ss aa\n输出格式：\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">正在加载默认值</string>
     <string name="file_settings">文件设置</string>
     <string name="search_and_replace">搜索/替换</string>
     <string name="search_for">搜索</string>
     <string name="replace_with">替换为</string>
-    <string name="replace_once">替换(1)</string>
+    <string name="replace_once">替换 (1)</string>
     <string name="replace_all">全部替换</string>
-    <string name="matches">比赛</string>
-    <string name="search_replace_pattern_error_message">搜索或替换图案错误。</string>
+    <string name="matches">匹配</string>
+    <string name="search_replace_pattern_error_message">搜索或替换模式错误。</string>
     <string name="backup_settings">备份设置</string>
     <string name="restore_settings">还原设置</string>
     <string name="failed_to_create_backup">创建备份失败</string>
-    <string name="export_settings_to_json_file">导出设置到 json 文件</string>
-    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">从备份json文件导入设置。成功后，应用程序将重启。</string>
+    <string name="export_settings_to_json_file">导出设置到 JSON 文件</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">从备份 JSON 文件导入设置。成功后，应用将重启。</string>
     <string name="failed_to_restore_settings_from_backup">从备份恢复设置失败</string>
-    <string name="newline_is_new_paragraph">新行 = 新段</string>
+    <string name="newline_is_new_paragraph">新增行 = 新建段落</string>
     <string name="search_in_content">搜索内容</string>
     <string name="max_search_depth">搜索深度</string>
     <string name="ignore_list">忽略列表</string>
-    <string name="do_not_search_specified_files_and_folders">不要搜索指定的文件和文件夹。\n使用新行作为分隔符。\n使用报价确切的目录名：“测试”。\n或使用Regex \'^[.].*\'\n示例：^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="do_not_search_specified_files_and_folders">不搜索指定的文件和文件夹。\n使用新增行作为分隔符。\n对于确切的目录名请使用引号：“Test”。\n或使用正则表达 \'^[.].*\'\n示例：^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">正则表达式搜索</string>
     <string name="case_sensitive">区分大小写</string>
-    <string name="stop_search_after_first_match">首次匹配后停止搜索</string>
+    <string name="stop_search_after_first_match">匹配到第一次后停止搜索</string>
     <string name="regex_can_not_be_compiled">无法编译正则表达式</string>
     <string name="keep_both">两者都保留</string>
     <string name="skip">跳过</string>
     <string name="overwrite">覆盖</string>
-    <string name="keep_both_all">两者都保留 (全部)</string>
-    <string name="skip_all">跳过 (所有)</string>
-    <string name="overwrite_all">覆盖 (所有)</string>
-    <string name="copy_move_conflict_message">\'%s已存在于 %s</string>
-    <string name="additional_contexts_and_projects">其他背景和项目</string>
-    <string name="enter_space_seperated_contexts_and_projects_these_will">输入space-separated @context和 +project。这些都将在 todo.txt 插入对话框时显示。</string>
+    <string name="keep_both_all">两者都保留（全部）</string>
+    <string name="skip_all">跳过（全部）</string>
+    <string name="overwrite_all">覆盖（全部）</string>
+    <string name="copy_move_conflict_message">\'%s\' 已存在于 %s</string>
+    <string name="additional_contexts_and_projects">其他情景和项目</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">输入以空格分隔的 @contexts 和 +projects。 您可以始终在 todo.txt 插入对话框中看见这些选项。</string>
     <string name="infinite">无限的</string>
     <string name="search_project">搜索项目</string>
-    <string name="search_context">搜索环境</string>
+    <string name="search_context">搜索情景</string>
     <string name="insert_project">插入项目</string>
-    <string name="insert_context">Insert contexts</string>
+    <string name="insert_context">插入情景</string>
 </resources>
