--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -373,7 +373,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="no_password_set_cannot_encrypt_decrypt">没有设置密码，不能加密或解密。\n请前往设置 -&gt; 常规 -&gt; 密码来设置密码。</string>
     <string name="encrypt_file_content">加密文件内容</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">无法加密文件内容。文件未保存。</string>
-    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">无法解密文件内容。您使用了错误的密码吗？该文件真的是加密的 Markors AES 吗？</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">无法解密文件内容。 您是否使用了错误的密码？ 文件是否真的使用 Markors AES 加密方式进行加密？</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">密码已设置。 设置新密码将覆盖现有密码，如果您忘记密码，您可能无法再访问文件。</string>
     <string name="code_block">代码块</string>
     <string name="add_completion_date">添加完成日期</string>
@@ -396,13 +396,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">从备份 JSON 文件导入设置。成功后，应用将重启。</string>
     <string name="failed_to_restore_settings_from_backup">从备份恢复设置失败</string>
     <string name="newline_is_new_paragraph">新增行 = 新建段落</string>
-    <string name="search_in_content">搜索内容</string>
+    <string name="search_in_content">在内容中搜索</string>
     <string name="max_search_depth">搜索深度</string>
-    <string name="ignore_list">忽略列表</string>
-    <string name="do_not_search_specified_files_and_folders">不搜索指定的文件和文件夹。\n使用新增行作为分隔符。\n对于确切的目录名请使用引号：“Test”。\n或使用正则表达 \'^[.].*\'\n示例：^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="ignore_list">忽略名单</string>
+    <string name="do_not_search_specified_files_and_folders">不搜索指定的文件和文件夹。\n使用换行作为分隔符。\n对于确切的目录名请使用引号：\"Test\"。\n或使用正则表达 \'^[.].*\'\n示例：^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">正则表达式搜索</string>
     <string name="case_sensitive">区分大小写</string>
-    <string name="stop_search_after_first_match">匹配到第一次后停止搜索</string>
+    <string name="stop_search_after_first_match">第一次匹配后停止搜索</string>
     <string name="regex_can_not_be_compiled">无法编译正则表达式</string>
     <string name="keep_both">两者都保留</string>
     <string name="skip">跳过</string>
