[ci skip] Update translations (Chinese Simplified)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -143,7 +143,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="textactions_show_useful_actions_description__appspecific">在底部显示一排快捷按钮。这些文本操作按钮可以修改文字或着对文字进行其他操作。</string>
     <string name="load_last_opened_folder_at_startup">启动时加载上次打开的目录</string>
     <string name="format">格式</string>
-    <string name="contexts">全文</string>
+    <string name="contexts">情境</string>
     <string name="project">项目</string>
     <string name="projects">项目</string>
     <string name="none">无</string>
@@ -151,24 +151,24 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="empty_file">空文件</string>
     <string name="break_page_pdf_print">分页 (PDF/打印)</string>
     <string name="underline">下划线</string>
-    <string name="underline_hex_color_wether_or_not_to_description__appspecific">为十六进制颜色代码按照颜色添加下划线</string>
-    <string name="underline_hex_color_codes">为十六进制颜色代码添加下划线</string>
+    <string name="underline_hex_color_wether_or_not_to_description__appspecific">是否根据颜色在十六进制颜色代码下划线</string>
+    <string name="underline_hex_color_codes">下划线十六进制颜色代码</string>
     <string name="insert_current_date_when_starting_new_task">在开始一项新任务时自动插入当前日期</string>
-    <string name="tasks_with_todays_date">为任务附上今天的日期</string>
-    <string name="append_contexts_and_projects">附加内容与项目</string>
-    <string name="append_contexts_and_projects_on_end_of_task">使用对应的文本操作时，在任务末尾附加完成的情境和项目</string>
+    <string name="tasks_with_todays_date">带有今天日期的任务</string>
+    <string name="append_contexts_and_projects">附加情境与项目</string>
+    <string name="append_contexts_and_projects_on_end_of_task">使用对应的文本操作时，在任务末尾附加情境和项目</string>
     <string name="rtl_rendering">从右向左渲染</string>
     <string name="highlight_line_ending">高亮行末</string>
-    <string name="highlight_line_ending_if_two_or_more_spaces">高亮显示两个及以上的行末空格</string>
+    <string name="highlight_line_ending_if_two_or_more_spaces">突出显示包含两个或多个空格的行末尾的空格</string>
     <string name="use_monospace_for_code">为代码使用等宽字体</string>
-    <string name="disable_code_block_highlight">禁用代码高亮</string>
-    <string name="auto_renumber_ordered_list">自动重新编号有序列表</string>
+    <string name="disable_code_block_highlight">禁用代码块高亮</string>
+    <string name="auto_renumber_ordered_list">自动重新编号的有序列表</string>
     <string name="auto_renumber_ordered_list_slowdown">此选项可能会影响应用性能。</string>
     <string name="use_different_fonttype_slow_down">用不同的字体显示代码。启用后可能会大幅影响性能。</string>
     <string name="general">通用</string>
     <string name="resources">资源</string>
-    <string name="space_between_lines_in_percent">单位为百分比</string>
-    <string name="line_spacing">行距</string>
+    <string name="space_between_lines_in_percent">行间距百分比</string>
+    <string name="line_spacing">行间距</string>
     <string name="archive_does_move_done_tasks">将完成的任务移动至同目录下的指定文件</string>
     <string name="sort_tasks_by_selected_order">按所选顺序对任务进行排序</string>
     <string name="special_key">特殊按键</string>
